# docs/swagger.json
@@ -243,13 +243,31 @@
                     "application/json"
                 ],
                 "summary": "List all uploaded recipes",
+                "parameters": [
+                    {
+                        "enum": [
+                            "weekly_views",
+                            "created_at"
+                        ],
+                        "type": "string",
+                        "description": "sort by field",
+                        "name": "sort",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "numbers to fetch",
+                        "name": "limits",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/service.RecipeResponse"
+                                "$ref": "#/definitions/service.RecipeThumbResponse"
                             }
                         }
                     },
@@ -338,6 +356,189 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/service.RecipeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/recipes/challenge": {
+            "get": {
+                "description": "List all challenge recipes",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List all challege recipes",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "numbers to fetch",
+                        "name": "limits",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/service.RecipeThumbResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/recipes/recommend": {
+            "get": {
+                "description": "List recommended recipes",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List recommended recipes",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "numbers to fetch",
+                        "name": "limits",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/service.RecipeThumbResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/service.ErrResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/recipes/trending": {
+            "get": {
+                "description": "List all trending recipes",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List trending recipes",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "numbers to fetch",
+                        "name": "limits",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/service.RecipeThumbResponse"
+                            }
                         }
                     },
                     "400": {
@@ -541,6 +742,32 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                },
+                "writer": {
+                    "$ref": "#/definitions/service.UserResponse"
+                }
+            }
+        },
+        "service.RecipeThumbResponse": {
+            "type": "object",
+            "properties": {
+                "ease": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image_path": {
+                    "type": "string"
+                },
+                "is_clipped": {
+                    "type": "boolean"
+                },
+                "preparation_time": {
+                    "type": "integer"
+                },
+                "title": {
                     "type": "string"
                 },
                 "writer": {
